Refactor initial currentTime assignment in scheduling algorithms to use getFirst() for clarity and consistency